packages/components/src/styles/components/advanced-table.scss
/* ... */
.hds-advanced-table__scroll-wrapper {
  max-width: 100%;
  max-height: 100%;
  overflow: auto;
}

.hds-advanced-table {
  display: grid;
  align-items: center;
  border-radius: $hds-advanced-table-border-radius;
  border-spacing: 0;
}

// table border
.hds-advanced-table__th,
.hds-advanced-table__td {
  border: calc(#{$hds-advanced-table-border-width} / 2) solid
    $hds-advanced-table-border-color;
}

.hds-advanced-table__thead, .hds-advanced-table__tbody {
  border: calc(#{$hds-advanced-table-border-width} / 2) solid
  $hds-advanced-table-border-color;
}

.hds-advanced-table__thead {
  border-bottom: none;
  border-top-left-radius: $hds-advanced-table-border-radius;
  border-top-right-radius: $hds-advanced-table-border-radius;
}

.hds-advanced-table__tbody {
  border-top: none;
  border-bottom-right-radius: $hds-advanced-table-border-radius;
  border-bottom-left-radius: $hds-advanced-table-border-radius;
}

// ----------------------------------------------------------------

// TABLE HEADER

.hds-advanced-table__thead {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: subgrid;

  .hds-advanced-table__tr {
    display: contents;

    .hds-advanced-table__th {
      align-content: center;
      height: 100%;
      padding: $hds-advanced-table-cell-padding-medium;
      color: var(--token-color-foreground-strong);
      text-align: left;
      background-color: var(--token-color-surface-strong);
      

      &:focus,
      &.mock-focus {
        @include hds-focus-ring-with-pseudo-element(
          $top: 1px,
          $right: 1px,
          $bottom: 1px,
          $left: 1px,
         $radius: inherit,
          $position: sticky);
        z-index: 1;
        isolation: isolate;
      }
    }

    // horizontal alignment

    .hds-advanced-table__th--align-center,
    .hds-advanced-table__td--align-center {
      text-align: center;

      .hds-advanced-table__th-content {
        justify-content: center;
      }
    }

    .hds-advanced-table__th--align-right,
    .hds-advanced-table__td--align-right {
      text-align: right;

      .hds-advanced-table__th-content {
        justify-content: flex-end;
      }
    }

    // sticky column

    .hds-advanced-table__th--is-sticky-column {
      // has a higher z-index than the sticky header content
    z-index: 7;

      &:first-of-type {
        position: sticky;
      }
    }

    .hds-advanced-table__th--is-sticky-column-pinned {
      &:first-of-type {
        left: -1px;
      border-left: calc(#{$hds-advanced-table-border-width} + 1px) solid
      $hds-advanced-table-border-color;
      }
    }
  
    // Only apply the thick border to the last sticky column
    .hds-advanced-table__th--is-sticky-column:not(:has(+ .hds-advanced-table__th--is-sticky-column)) {
      border-right: 3px solid $hds-advanced-table-border-color;
    }

    .hds-advanced-table__th--is-sticky-column.hds-advanced-table__th--is-selectable + .hds-advanced-table__th--is-sticky-column.hds-advanced-table__th--is-sticky-column-pinned {
      position: sticky;
      // If there is a select column the variable gets set to the width of the select column via inline styles on the grid
      left: calc(var(--hds-advanced-table-sticky-column-offset, 0) - 1px);
    }

    // border radius: target first and last th elements in the row
    &:first-of-type {
      .hds-advanced-table__th:first-child {
        border-top-left-radius: $hds-advanced-table-inner-border-radius;
      }

      .hds-advanced-table__th:last-child {
        border-top-right-radius: $hds-advanced-table-inner-border-radius;
      }
    }
  }

  &.hds-advanced-table__thead--column-is-pinned {
    .hds-advanced-table__tr {
      &:first-of-type {
        .hds-advanced-table__th:first-child {
          border-top-left-radius: 0;
        }

        .hds-advanced-table__th:last-child {
          border-top-right-radius: 0;
        }
      }
    }
  }

  // sticky header
  &.hds-advanced-table__thead--sticky {
    position: sticky;
    top: -1px;
    z-index: 5;
    // need to subtract width of cell top border for default state, otherwise border of header+cell is 3.5px
    border-bottom: calc(3px - #{$hds-advanced-table-border-width} / 2) solid $hds-advanced-table-border-color;
  }

  &.hds-advanced-table__thead--is-pinned {
    background-color: var(--token-color-surface-strong);
    // need to add 1px to offset `top: -1px`
    border-top: calc(#{$hds-advanced-table-border-width} / 2 + 1px) solid
    $hds-advanced-table-border-color;
    border-bottom: 3px solid $hds-advanced-table-border-color;

    .hds-advanced-table__tr {
      &:first-of-type {
        .hds-advanced-table__th:first-child {
          border-top-left-radius: 0;
        }

        .hds-advanced-table__th:last-child {
          border-top-right-radius: 0;
        }
      }
    }
  }
}

// multi-select (isSelectable=true)
.hds-advanced-table__th-content {
  display: flex;
  gap: 8px;
  align-items: center;
  justify-content: flex-start;
}
/* ... */

